Remove old circle and some other misc changes

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -253,6 +253,11 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClCompile Include="engine\event\InputHandler.cpp" />
     <ClCompile Include="engine\parsing\Image.cpp" />
     <ClCompile Include="engine\parsing\ImageProcessor.cpp" />
+    <ClCompile Include="engine\physics\Body.cpp" />
+    <ClCompile Include="engine\physics\Circle.cpp" />
+    <ClCompile Include="engine\physics\Collision.cpp" />
+    <ClCompile Include="engine\physics\Manifold.cpp" />
+    <ClCompile Include="engine\physics\Polygon.cpp" />
     <ClCompile Include="engine\physics\RigidBody.cpp" />
     <ClCompile Include="engine\renderer\Camera.cpp" />
     <ClCompile Include="engine\renderer\Color.cpp" />
@@ -310,6 +315,9 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\Include.h" />
     <ClInclude Include="engine\parsing\Image.h" />
     <ClInclude Include="engine\parsing\ImageProcessor.h" />
+    <ClInclude Include="engine\physics\Body.h" />
+    <ClInclude Include="engine\physics\Circle.h" />
+    <ClInclude Include="engine\physics\Collision.h" />
     <ClInclude Include="engine\physics\collision\CollisionFunctions.h" />
     <ClInclude Include="engine\physics\collision\CollisionManifold.h" />
     <ClInclude Include="engine\physics\collision\dynamic\DynamicAABBvsAABB.h" />
@@ -318,18 +326,20 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\physics\collision\static\CirclevsCircle.h" />
     <ClInclude Include="engine\physics\collision\static\LinevsAABB.h" />
     <ClInclude Include="engine\physics\collision\static\PointvsAABB.h" />
+    <ClInclude Include="engine\physics\Manifold.h" />
+    <ClInclude Include="engine\physics\Physics.h" />
+    <ClInclude Include="engine\physics\Polygon.h" />
+    <ClInclude Include="engine\physics\Shape.h" />
     <ClInclude Include="engine\renderer\SpriteMap.h" />
     <ClInclude Include="engine\physics\RigidBody.h" />
     <ClInclude Include="engine\renderer\AABB.h" />
     <ClInclude Include="engine\renderer\Animation.h" />
     <ClInclude Include="engine\renderer\Camera.h" />
-    <ClInclude Include="engine\renderer\Circle.h" />
     <ClInclude Include="engine\renderer\Color.h" />
     <ClInclude Include="engine\renderer\Flip.h" />
     <ClInclude Include="engine\renderer\FontManager.h" />
     <ClInclude Include="engine\renderer\Ray2D.h" />
     <ClInclude Include="engine\renderer\Renderer.h" />
-    <ClInclude Include="engine\renderer\Shape.h" />
     <ClInclude Include="engine\renderer\Texture.h" />
     <ClInclude Include="engine\renderer\TextureManager.h" />
     <ClInclude Include="engine\renderer\Window.h" />
@@ -360,6 +370,7 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\utils\Hasher.h" />
     <ClInclude Include="engine\utils\Logger.h" />
     <ClInclude Include="engine\utils\Math.h" />
+    <ClInclude Include="engine\utils\Matrix.h" />
     <ClInclude Include="engine\utils\PerlinNoise.h" />
     <ClInclude Include="engine\utils\PerlinNoise2.hpp" />
     <ClInclude Include="engine\utils\RNG.h" />
