--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -267,9 +267,8 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClCompile Include="engine\renderer\Texture.cpp" />
     <ClCompile Include="engine\renderer\TextureManager.cpp" />
     <ClCompile Include="engine\renderer\Window.cpp" />
-    <ClCompile Include="engine\utils\AllocationMetrics.cpp" />
-    <ClCompile Include="engine\utils\Hasher.cpp" />
-    <ClCompile Include="engine\utils\SimplexNoise.cpp" />
+    <ClCompile Include="engine\utils\debug\AllocationMetrics.cpp" />
+    <ClCompile Include="engine\utils\math\Hasher.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\core\Engine.h" />
@@ -283,6 +282,7 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\ecs\components\DirectionComponent.h" />
     <ClInclude Include="engine\ecs\components\InputComponent.h" />
     <ClInclude Include="engine\ecs\components\LifetimeComponent.h" />
+    <ClInclude Include="engine\ecs\components\ParticleComponent.h" />
     <ClInclude Include="engine\ecs\components\PlayerController.h" />
     <ClInclude Include="engine\ecs\components\RenderComponent.h" />
     <ClInclude Include="engine\ecs\components\RigidBodyComponent.h" />
@@ -330,6 +330,8 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\physics\Physics.h" />
     <ClInclude Include="engine\physics\Polygon.h" />
     <ClInclude Include="engine\physics\Shape.h" />
+    <ClInclude Include="engine\renderer\particles\ParticleManager.h" />
+    <ClInclude Include="engine\renderer\particles\Particle.h" />
     <ClInclude Include="engine\renderer\SpriteMap.h" />
     <ClInclude Include="engine\physics\RigidBody.h" />
     <ClInclude Include="engine\renderer\AABB.h" />
@@ -338,7 +340,6 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\renderer\Color.h" />
     <ClInclude Include="engine\renderer\Flip.h" />
     <ClInclude Include="engine\renderer\FontManager.h" />
-    <ClInclude Include="engine\renderer\Ray2D.h" />
     <ClInclude Include="engine\renderer\Renderer.h" />
     <ClInclude Include="engine\renderer\Texture.h" />
     <ClInclude Include="engine\renderer\TextureManager.h" />
@@ -364,21 +365,19 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\ui\components\TextComponent.h" />
     <ClInclude Include="engine\ui\UI.h" />
     <ClInclude Include="engine\ui\UIComponents.h" />
-    <ClInclude Include="engine\utils\AllocationMetrics.h" />
+    <ClInclude Include="engine\utils\debug\AllocationMetrics.h" />
     <ClInclude Include="engine\utils\Debug.h" />
     <ClInclude Include="engine\utils\Direction.h" />
-    <ClInclude Include="engine\utils\Hasher.h" />
-    <ClInclude Include="engine\utils\Logger.h" />
+    <ClInclude Include="engine\utils\math\Hasher.h" />
+    <ClInclude Include="engine\utils\debug\Logger.h" />
     <ClInclude Include="engine\utils\Math.h" />
-    <ClInclude Include="engine\utils\Matrix.h" />
-    <ClInclude Include="engine\utils\PerlinNoise.h" />
-    <ClInclude Include="engine\utils\PerlinNoise2.hpp" />
-    <ClInclude Include="engine\utils\RNG.h" />
-    <ClInclude Include="engine\utils\Side.h" />
-    <ClInclude Include="engine\utils\SimplexNoise.h" />
+    <ClInclude Include="engine\utils\math\MathFunctions.h" />
+    <ClInclude Include="engine\utils\math\Matrix.h" />
+    <ClInclude Include="engine\utils\math\PerlinNoise.h" />
+    <ClInclude Include="engine\utils\math\RNG.h" />
+    <ClInclude Include="engine\utils\TypeTraits.h" />
     <ClInclude Include="engine\utils\Timer.h" />
-    <ClInclude Include="engine\utils\Utility.h" />
-    <ClInclude Include="engine\utils\Vector2.h" />
+    <ClInclude Include="engine\utils\math\Vector2.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="dlls\libfreetype-6.dll" />
