Move state related headers to statemachine directory and make statemachine improvements

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -248,7 +248,6 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClCompile Include="engine\core\Engine.cpp" />
     <ClCompile Include="engine\core\Chunk.cpp" />
     <ClCompile Include="engine\core\Scene.cpp" />
-    <ClCompile Include="engine\ecs\components\StateMachineComponent.cpp" />
     <ClCompile Include="engine\event\EventHandler.cpp" />
     <ClCompile Include="engine\event\InputHandler.cpp" />
     <ClCompile Include="engine\parsing\Image.cpp" />
@@ -289,9 +288,14 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\ecs\components\SizeComponent.h" />
     <ClInclude Include="engine\ecs\components\SpriteComponent.h" />
     <ClInclude Include="engine\ecs\components\SpriteSheetComponent.h" />
-    <ClInclude Include="engine\ecs\components\StateMachineComponent.h" />
+    <ClInclude Include="engine\statemachine\StateMachineComponent.h" />
     <ClInclude Include="engine\ecs\components\TagComponent.h" />
     <ClInclude Include="engine\ecs\components\TransformComponent.h" />
+    <ClInclude Include="engine\statemachine\states\button\ActiveButtonState.h" />
+    <ClInclude Include="engine\statemachine\states\button\DefaultButtonState.h" />
+    <ClInclude Include="engine\statemachine\states\button\FocusedButtonState.h" />
+    <ClInclude Include="engine\statemachine\states\button\HoverButtonState.h" />
+    <ClInclude Include="engine\ui\components\FocusedColorComponent.h" />
     <ClInclude Include="engine\ui\components\UIComponent.h" />
     <ClInclude Include="engine\ecs\ECS.h" />
     <ClInclude Include="engine\ecs\Systems.h" />
@@ -305,7 +309,7 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\ecs\systems\LifetimeSystem.h" />
     <ClInclude Include="engine\ecs\systems\PhysicsSystem.h" />
     <ClInclude Include="engine\ecs\systems\RenderSystem.h" />
-    <ClInclude Include="engine\ecs\systems\StateMachineSystem.h" />
+    <ClInclude Include="engine\statemachine\StateMachineSystem.h" />
     <ClInclude Include="engine\ecs\System.h" />
     <ClInclude Include="engine\ui\UISystem.h" />
     <ClInclude Include="engine\event\EventHandler.h" />
@@ -348,20 +352,18 @@ xcopy /d /y "$(SolutionDir)libraries\SDL2_ttf\licenses\*" "$(SolutionDir)$(Confi
     <ClInclude Include="engine\statemachine\StateMachine.h" />
     <ClInclude Include="engine\statemachine\StateMachines.h" />
     <ClInclude Include="engine\statemachine\States.h" />
-    <ClInclude Include="engine\statemachine\states\BaseState.h" />
-    <ClInclude Include="engine\statemachine\states\GroundedState.h" />
-    <ClInclude Include="engine\statemachine\states\IdleState.h" />
-    <ClInclude Include="engine\statemachine\states\JumpState.h" />
-    <ClInclude Include="engine\statemachine\states\RunState.h" />
-    <ClInclude Include="engine\statemachine\states\State.h" />
-    <ClInclude Include="engine\statemachine\states\WalkState.h" />
+    <ClInclude Include="engine\statemachine\BaseState.h" />
+    <ClInclude Include="engine\statemachine\states\movement\GroundedState.h" />
+    <ClInclude Include="engine\statemachine\states\movement\IdleState.h" />
+    <ClInclude Include="engine\statemachine\states\movement\JumpState.h" />
+    <ClInclude Include="engine\statemachine\states\movement\RunState.h" />
+    <ClInclude Include="engine\statemachine\State.h" />
+    <ClInclude Include="engine\statemachine\states\movement\WalkState.h" />
     <ClInclude Include="engine\ui\components\ActiveColorComponent.h" />
     <ClInclude Include="engine\ui\components\BackgroundColorComponent.h" />
     <ClInclude Include="engine\ui\components\EventComponent.h" />
     <ClInclude Include="engine\ui\components\HoverColorComponent.h" />
-    <ClInclude Include="engine\ui\components\InfluenceComponent.h" />
     <ClInclude Include="engine\ui\components\MouseOffsetComponent.h" />
-    <ClInclude Include="engine\ui\components\StateComponent.h" />
     <ClInclude Include="engine\ui\components\TextComponent.h" />
     <ClInclude Include="engine\ui\UI.h" />
     <ClInclude Include="engine\ui\UIComponents.h" />
