--- a/Bayes/Bayes.vcxproj.filters
+++ b/Bayes/Bayes.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="src\components\HopperComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\systems\HopperCameraSystem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
