--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -413,6 +413,12 @@
     <ClInclude Include="engine\ui\components\FocusedColorComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="engine\ecs\ECSImplementation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\ecs\ECSOld.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="dlls\libfreetype-6.dll" />
